# ironclaw

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOC.md  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  docker-compose.yml  grafana-dashboard.json  index.html  install.sh  ironclaw.schema.json  justfile  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backport.yml  ci.yml  docs.yml  pages.yml  release-plz.yml  release.yml  security.yml
Formula/: ironclaw.rb
crates/ironclaw-agents/: CHANGELOG.md  Cargo.toml
crates/ironclaw-agents/src/: bus.rs  context.rs  cot.rs  critic.rs  eval.rs  handler.rs  lib.rs  planner.rs  react.rs  router.rs  swarm.rs  timeout.rs  workflow.rs
crates/ironclaw-agents/tests/: agent_tests.rs
crates/ironclaw-channels/: CHANGELOG.md  Cargo.toml
crates/ironclaw-channels/src/: cli.rs  discord.rs  lib.rs  matrix.rs  metrics.rs  middleware.rs  ratelimit.rs  rest.rs  slack.rs  telegram.rs  webhook.rs  websocket.rs
crates/ironclaw-cli/: CHANGELOG.md  Cargo.toml
crates/ironclaw-cli/src/: main.rs  otel.rs
crates/ironclaw-config/: CHANGELOG.md  Cargo.toml
crates/ironclaw-config/benches/: config_bench.rs
crates/ironclaw-config/src/: lib.rs  watcher.rs
crates/ironclaw-config/tests/: config_tests.rs  proptest_config.rs
crates/ironclaw-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ironclaw-core/benches/: core_bench.rs
crates/ironclaw-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ironclaw-core/tests/: coverage_tests.rs  proptest_types.rs  types_tests.rs
crates/ironclaw-memory/: CHANGELOG.md  Cargo.toml
crates/ironclaw-memory/benches/: memory_bench.rs
crates/ironclaw-memory/src/: inmemory.rs  lib.rs  redis.rs  sqlite.rs  vector.rs
crates/ironclaw-providers/: CHANGELOG.md  Cargo.toml
crates/ironclaw-providers/benches/: registry_bench.rs
crates/ironclaw-providers/src/: anthropic.rs  circuit_breaker.rs  cohere.rs  compat.rs  cost.rs  groq.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  openrouter.rs  registry.rs  retry.rs  sse.rs  together.rs
crates/ironclaw-providers/tests/: provider_integration.rs
crates/ironclaw-tools/: CHANGELOG.md  Cargo.toml
crates/ironclaw-tools/src/: calculator.rs  cron.rs  datetime.rs  fileread.rs  filewrite.rs  httpget.rs  lib.rs  registry.rs  shell.rs  websearch.rs
crates/ironclaw-tools/tests/: tool_tests.rs
crates/ironclaw-wasm/: CHANGELOG.md  Cargo.toml
crates/ironclaw-wasm/examples/: README.md  registry.json
crates/ironclaw-wasm/examples/crypto-price/: Cargo.toml  plugin.json
crates/ironclaw-wasm/examples/crypto-price/src/: lib.rs
crates/ironclaw-wasm/examples/weather/: Cargo.toml  plugin.json
crates/ironclaw-wasm/examples/weather/src/: lib.rs
crates/ironclaw-wasm/src/: capability.rs  installer.rs  lib.rs  manifest.rs  runtime.rs
crates/ironclaw-wasm/wit/: plugin.wit
deploy/helm/ironclaw/: Chart.yaml  values.yaml
deploy/helm/ironclaw/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
docs/: DISCORD.md  MIGRATION.md  SECURITY_AUDIT.md  STABILITY.md  VERSIONING.md
examples/: basic_chat.rs  multi_agent.rs  rest_client.rs  tool_use.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_toml.rs  fuzz_message_serde.rs  fuzz_rest_body.rs  fuzz_sse_lines.rs  fuzz_tool_params.rs
sdks/python/: README.md  pyproject.toml
sdks/python/src/ironclaw/: __init__.py  client.py  types.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: index.ts
supply-chain/: audits.toml  config.toml
