[package]
name = "ironclaw-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ironclaw-core = { path = "../crates/ironclaw-core" }
ironclaw-tools = { path = "../crates/ironclaw-tools" }
ironclaw-config = { path = "../crates/ironclaw-config" }
serde_json = "1"
toml = "0.8"

[workspace]

# Prevent this from being part of the parent workspace
# cargo-fuzz manages this separately.

[[bin]]
name = "fuzz_message_serde"
path = "fuzz_targets/fuzz_message_serde.rs"
doc = false

[[bin]]
name = "fuzz_config_toml"
path = "fuzz_targets/fuzz_config_toml.rs"
doc = false

[[bin]]
name = "fuzz_tool_params"
path = "fuzz_targets/fuzz_tool_params.rs"
doc = false

[[bin]]
name = "fuzz_sse_lines"
path = "fuzz_targets/fuzz_sse_lines.rs"
doc = false
