
[package]
name    = "ironclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default   = ["rest", "cli"]
rest      = ["axum", "tower-http"]
cli       = []
telegram  = ["teloxide"]
discord   = ["serenity"]
slack     = ["axum", "tower-http", "reqwest"]
websocket = ["axum"]
webhook   = ["axum", "tower-http"]
matrix    = ["reqwest"]

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }
tokio-stream = { workspace = true }

axum         = { version = "0.7", features = ["ws"], optional = true }
tower-http   = { version = "0.5", features = ["cors"], optional = true }
teloxide     = { workspace = true, optional = true }
serenity     = { workspace = true, optional = true }
reqwest      = { workspace = true, optional = true }

dashmap  = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }