
[package]
name        = "ironclaw-channels"
description = "Communication channels (CLI, REST, Telegram, Discord) for the IronClaw AI agent framework"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default   = ["rest", "cli", "prometheus"]
rest      = ["axum", "tower-http", "prometheus"]
cli       = []
telegram  = ["teloxide"]
discord   = ["serenity"]
slack     = ["axum", "tower-http", "reqwest"]
websocket = ["axum"]
webhook   = ["axum", "tower-http"]
matrix    = ["reqwest"]
prometheus = ["metrics", "metrics-exporter-prometheus"]

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
futures      = { workspace = true }
tokio-stream = { workspace = true }

axum         = { version = "0.7", features = ["ws"], optional = true }
tower-http   = { version = "0.5", features = ["cors"], optional = true }
teloxide     = { workspace = true, optional = true }
serenity     = { workspace = true, optional = true }
reqwest      = { workspace = true, optional = true }

dashmap  = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }
regex-lite = { workspace = true }
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
