
[package]
name    = "ironclaw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ironclaw"
path = "src/main.rs"

[dependencies]
ironclaw-core      = { workspace = true }
ironclaw-config    = { workspace = true }
ironclaw-providers = { workspace = true, features = ["all"] }
ironclaw-memory    = { workspace = true }
ironclaw-tools     = { workspace = true }
ironclaw-wasm      = { workspace = true }
ironclaw-channels  = { workspace = true, features = ["rest","cli"] }
ironclaw-agents    = { workspace = true }

tokio        = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json   = { workspace = true }
clap         = { version = "4", features = ["derive"] }
