
[package]
name    = "ironclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
