
[package]
name        = "ironclaw-core"
description = "Core traits and types for the IronClaw AI agent framework"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true
readme      = "README.md"
keywords    = ["ai", "agent", "llm", "framework", "async"]
categories  = ["asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
proptest = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
