
[package]
name        = "ironclaw-memory"
description = "Memory backends (in-memory, SQLite, Redis) for the IronClaw AI agent framework"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
sqlx         = { workspace = true }
redis        = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
