
[package]
name    = "ironclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default    = ["ollama", "anthropic", "openai"]
ollama     = []
anthropic  = []
openai     = []
groq       = []
openrouter = []
all        = ["ollama","anthropic","openai","groq","openrouter"]

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
bytes        = { workspace = true }
uuid         = { workspace = true }
