
[package]
name        = "ironclaw-providers"
description = "LLM provider implementations (Ollama, Anthropic, OpenAI, Groq) for IronClaw"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default    = ["ollama", "anthropic", "openai"]
ollama     = []
anthropic  = []
openai     = []
groq       = []
openrouter = []
mistral    = []
together   = []
cohere     = []
all        = ["ollama","anthropic","openai","groq","openrouter","mistral","together","cohere"]

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
bytes        = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
mockito      = "1"
serial_test  = "3"
tokio        = { workspace = true }
criterion    = { workspace = true }
futures      = { workspace = true }

[[bench]]
name = "registry_bench"
harness = false
