
[package]
name        = "ironclaw-tools"
description = "Built-in tool implementations (shell, HTTP, search, datetime) for IronClaw"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[dependencies]
ironclaw-core   = { workspace = true }
ironclaw-config = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
reqwest     = { workspace = true }
dashmap     = { workspace = true }
uuid        = { workspace = true }
urlencoding = "2"
