
[package]
name    = "ironclaw-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ironclaw-core = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
tokio         = { workspace = true }
