
[package]
name        = "ironclaw-wasm"
description = "WASM Component Model plugin runtime for the IronClaw AI agent framework"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage.workspace   = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
runtime = ["wasmtime"]
sha256  = ["sha2"]
all     = ["runtime", "sha256"]

[dependencies]
ironclaw-core = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
tokio         = { workspace = true }
wasmtime      = { workspace = true, optional = true }
sha2          = { workspace = true, optional = true }
