[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ironclaw"
version = "0.1.0"
description = "Python client for the IronClaw AI agent framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "IronClaw Contributors" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27,<1", "httpx-sse>=0.4,<1"]
keywords = ["ironclaw", "ai", "agent", "llm", "sse", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/mednabouli/ironclaw"
Repository = "https://github.com/mednabouli/ironclaw"
Documentation = "https://github.com/mednabouli/ironclaw/tree/main/sdks/python"

[tool.hatch.build.targets.wheel]
packages = ["src/ironclaw"]
