[package]
name        = "crypto-price-plugin"
version     = "0.1.0"
edition     = "2021"
description = "IronClaw WASM plugin — get crypto prices from CoinGecko"
license     = "MIT"
publish     = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json  = "1"
wit-bindgen = "0.41"

[package.metadata.component]
package = "ironclaw:plugin"

[package.metadata.component.target]
world = "plugin"

[package.metadata.component.target.dependencies]
"ironclaw:plugin" = { path = "../../wit" }
